[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="buttonJoin" type="Button" parent="."]
margin_left = 369.298
margin_top = 324.078
margin_right = 583.298
margin_bottom = 408.078
text = "JOIN"

[node name="buttonHost" type="Button" parent="."]
margin_left = 372.313
margin_top = 161.285
margin_right = 586.313
margin_bottom = 245.285
text = "HOST"
[connection signal="pressed" from="buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="buttonHost" to="." method="_on_buttonHost_pressed"]
